organizando multiplos containers com seguranca

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,32 @@
+events {
+    # Configurações de eventos do Nginx (pode ser deixado vazio ou configurado para otimizar a performance)
+}
+
 http {
     server {
         listen 80;
-
         server_name site1.local;
+
         location / {
-            proxy_pass http://site1:5000;
+            proxy_pass http://web:5000;
         }
     }
 
     server {
         listen 80;
-
         server_name site2.local;
+
         location / {
-            proxy_pass http://site2:5000;
+            proxy_pass http://web2:5000;
+        }
+    }
+
+    server {
+        listen 9187;
+        server_name postgres_exporter;
+
+        location / {
+            proxy_pass http://pg_exporter:9187;
         }
     }
 }
