--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,39 @@
 version: '3'
 services:
   web:
-    image: minha-app-python:3.0
+    image: site1:1.0
     container_name: 'site1'
-    build: .
+    build: ./site1
     volumes:
-      - .:/app
+      - ./site1:/app
     environment:
       - FLASK_ENV=development
     cpus: '0.1' #usar 10% de um nucleo
     mem_limit: '128mb' #usar somente 128mb
     networks:
-      - 'intranet'
-      - "rede_proxy"
+      - rede_proxy
+      - intranet
+      - monitoring_network
     depends_on:
       - db
     expose:
       - '5000'
   web2:
     image: site2:1.0
-    container_name: site2
+    build: ./site2
+    container_name: "site2"
     volumes:
-      - .:./app2
+      - ./site2:/app
+    environment:
+      - FLASK_ENV=development
+    cpus: '0.1' #usar 10% de um nucleo
+    mem_limit: '128mb' #usar somente 128mb
     networks:
-      - 'intranet'
-      - "rede_proxy"
+      - rede_proxy
+      - intranet
+      - monitoring_network
+    depends_on:
+      - db
     expose:
       - "5000"  # Expondo a porta internamente
   nginx:
@@ -36,6 +45,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
     networks:
       - rede_proxy
+      - monitoring_network
   db:
     image: postgres:16.4
     environment:
@@ -47,14 +57,38 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data  # Correção aqui, o volume é um mapeamento
     networks:
-      -  'intranet'
+      - intranet
+      - monitoring_network
     expose:
       - "5432" # maneira segura de liberar acesso aos demais containers, sem expor a porta ao publico.
+  pg_exporter:
+    image: wrouesnel/postgres_exporter
+    container_name: postgres_exporter
+    environment:
+      DATA_SOURCE_NAME: "postgresql://user:password@db:5432/meu_app?sslmode=disable"
+    ports:
+      - "9187:9187"
+    networks:
+      - monitoring_network
+      - intranet  # Rede para acessar o banco de dados
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - monitoring_network
+
 volumes:
   pgdata:  # Definindo o volume aqui corretamente como mapeamento
-
+  
 networks:
   intranet:
-    name: 'intranet'
+    driver: bridge 
   rede_proxy:
+    driver: bridge
+  monitoring_network:
     driver: bridge
