--- a/site2/Dockerfile
+++ b/site2/Dockerfile
@@ -4,6 +4,10 @@ FROM python:3.9-slim
 # Definir o diretório de trabalho dentro do container
 WORKDIR /app
 
+#cria um usuario padrao para executar as proximas rotinas. Em prol de segurança.
+RUN useradd -ms /bin/bash myuser
+USER myuser
+
 # Copiar o arquivo requirements para o container
 COPY requirements.txt requirements.txt
 
@@ -14,7 +18,7 @@ RUN pip install -r requirements.txt
 COPY . .
 
 # Expor a porta onde o Flask vai rodar
-EXPOSE 80
+EXPOSE 5000
 
 # Comando para iniciar a aplicação
 CMD ["python", "app.py"]
